--- a/src/main/resources/templates/administrar_pedidos.html
+++ b/src/main/resources/templates/administrar_pedidos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>Solicitud de Ventas</h1>
-    <c:forEach var="pedido" items="${pedidos}">
-        <div class="pedido">
-            <p>Nombre: ${pedido.nombre}</p>
-            <p>Teléfono: ${pedido.telefono}</p>
-            <p>Dirección: ${pedido.direccion}</p>
-            <p>Estado: ${pedido.estado}</p>
+    <div th:each="pedido : ${pedidos}">
+        <div>
+            <p>Nombre: <span th:text="${pedido.nombre}"></span></p>
+            <p>Teléfono: <span th:text="${pedido.telefono}"></span></p>
+            <p>Dirección: <span th:text="${pedido.direccion}"></span></p>
+            <p>Estado: <span th:text="${pedido.estado}"></span></p>
             <form action="/carrito/aceptar-pedido/${pedido.id}" method="POST">
                 <button type="submit">Aceptar Pedido</button>
             </form>
@@ -20,6 +20,6 @@
                 <button type="submit">Rechazar Pedido</button>
             </form>
         </div>
-    </c:forEach>
+    </div>
 </body>
 </html>
