--- a/src/main/resources/templates/PanelControlAdmin.html
+++ b/src/main/resources/templates/PanelControlAdmin.html
@@ -57,11 +57,11 @@
             <a class="nav-link" href="/registrar-producto" target="contenido">Registrar Producto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Solicitud-ventas" target="contenido">Solicitud Ventas</a>
+            <a class="nav-link" href="carrito/administrar_pedidos" target="contenido">Solicitud Ventas</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/listas-ventas" target="contenido"> Listar Ventas</a>
+            <a class="nav-link" href="/listarVentas" target="contenido"> Listar Ventas</a>
           </li>
 
         </ul>
@@ -79,7 +79,7 @@
 
   <!-- Contenido embebido -->
 
-  <iframe name="contenido" src="/datos-empresa"></iframe>
+ 
 
   
   
