--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -16,6 +16,7 @@
             <th>Color</th>
             <th>Cantidad</th>
             <th>Precio Unitario</th>
+            <th>Subtotal</th> <!-- Nueva columna -->
         </tr>
         </thead>
         <tbody>
@@ -24,10 +25,13 @@
             <td th:text="${detalle.talle}"></td>
             <td th:text="${detalle.color}"></td>
             <td th:text="${detalle.cantidad}"></td>
-            <td th:text="${detalle.precio_unit}"></td>
+            <td th:text="${#numbers.formatDecimal(detalle.precio_unit, 1, 'COMMA', 2, 'POINT')}"></td>
+            <td th:text="${#numbers.formatDecimal(detalle.precio_unit * detalle.cantidad, 1, 'COMMA', 2, 'POINT')}"></td>
         </tr>
         </tbody>
     </table>
+    <p><strong>Total del carrito:</strong> <span th:text="${#numbers.formatDecimal(total, 1, 'COMMA', 2, 'POINT')}"></span></p>
+
 
     <form action="/carrito/realizar-pedido" method="POST">
         <label for="nombre">Nombre:</label>
