--- a/src/main/resources/templates/editarProducto.html
+++ b/src/main/resources/templates/editarProducto.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Editar Producto</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500&display=swap"
+    rel="stylesheet" />
   <style>
     body {
       background: linear-gradient(to bottom, #fff6f9, #f0f2f5);
@@ -82,6 +85,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h2>Editar Producto</h2>
@@ -99,27 +103,49 @@
       <input type="text" class="form-control" id="color" name="color" th:value="${color}" required>
 
       <label for="descripcion" class="form-label">Descripción</label>
-      <textarea class="form-control" id="descripcion" name="descripcion" rows="4" placeholder="Ingrese una descripción detallada"  th:text="${descripcion}" required></textarea>
+      <textarea class="form-control" id="descripcion" name="descripcion" rows="4" th:text="${descripcion}" required></textarea>
 
       <label for="precio" class="form-label">Precio</label>
-      <input type="number" class="form-control" id="precio" name="precio" step="0.01" placeholder="Ingrese el precio"  th:value="${precio}" required>
+      <input type="number" class="form-control" id="precio" name="precio" step="0.01" th:value="${precio}" required>
 
       <label for="descuento" class="form-label">Descuento (%)</label>
-      <input type="number" class="form-control" id="descuento" name="descuento" step="0.01" placeholder="Ingrese el porcentaje de descuento"  th:value="${descuento}" >
+      <input type="number" class="form-control" id="descuento" name="descuento" step="0.01" th:value="${descuento}">
+
+      <label for="estado" class="form-label">Estado</label>
+      <select class="form-select" id="estado" name="estado" required>
+        <option value="">Seleccione un estado</option>
+        <option value="Activo" th:selected="${estado eq 'Activo'}">Activo</option>
+        <option value="Inactivo" th:selected="${estado eq 'Inactivo'}">Inactivo</option>
+      </select>
+
+
+      <label for="formGroupExampleInput8" class="form-label">Stock</label>
+      <input type="number" class="form-control" id="formGroupExampleInput8" name="stock" th:value="${stock}" required>
+      
+
 
       <label for="genero" class="form-label">Género</label>
       <select class="form-select" id="genero" name="genero" required>
         <option value="">Seleccione una opción</option>
         <option value="Masculino" th:selected="${genero eq 'Masculino'}">Masculino</option>
         <option value="Femenino" th:selected="${genero eq 'Femenino'}">Femenino</option>
-        <option value="Unisex"th:selected="${genero eq 'Unisex'}">Unisex</option>
+        <option value="Unisex" th:selected="${genero eq 'Unisex'}">Unisex</option>
       </select>
 
       <label for="tipo" class="form-label">Tipo de Prenda</label>
-      <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Ingrese el tipo de prenda"  th:value="${tipo}" required>
+      <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Ingrese el tipo de prenda"
+        th:value="${tipo}" required>
 
-      <label for="file" class="form-label">Foto del Producto</label>
-      <input type="file" class="form-control" id="file" name="file" multiple/>
+      <label for="file" class="form-label">Foto 1</label>
+      <input type="file" class="form-control" id="file" name="file" multiple />
+
+
+      <label for="file1" class="form-label">Foto 2</label>
+      <input type="file" class="form-control" id="file1" name="file1" multiple />
+
+
+      <label for="file2" class="form-label">Foto 3</label>
+      <input type="file" class="form-control" id="file2" name="file2" multiple />
 
       <button type="submit" class="btn btn-custom mt-4">Guardar Cambios</button>
     </form>
@@ -128,4 +154,5 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
