--- a/src/main/resources/templates/listarProductos.html
+++ b/src/main/resources/templates/listarProductos.html
@@ -6,6 +6,16 @@
     <title>Lista de Productos</title>
     <!-- Incluir Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Estilos de DataTables -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.3.0/css/dataTables.dataTables.css" />
+    <script src="https://cdn.datatables.net/plug-ins/2.3.0/i18n/es-ES.json"></script>
+
+    
+
+    <!-- jQuery y DataTables -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/2.3.0/js/dataTables.js"></script>
     <style>
         body {
             background-color: #f4f6f9;
@@ -47,7 +57,7 @@
     <div class="table-container">
         <h2 class="text-center mb-4">Lista de Productos</h2>
         
-        <table class="table table-bordered">
+        <table id="myTable" class="display">
             <thead>
                 <tr>
                     <th scope="col">Código</th>
@@ -57,8 +67,13 @@
                     <th scope="col">Descuento</th>
                     <th scope="col">Género</th>
                     <th scope="col">Tipo de Vestimenta</th>
+                    <th scope="col">Talla</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col">Stock</th>
+
                     <th scope="col">Foto</th>
                     <th scope="col">Acciones</th>
+                    
                 </tr>
             </thead>
             <tbody>
@@ -70,6 +85,9 @@
                     <td th:text="${producto.descuento}"></td>
                     <td th:text="${producto.genero}"></td>
                     <td th:text="${producto.tipo}"></td>
+                    <td th:text="${producto.talle}"></td>
+                    <td th:text="${producto.estado}"></td>
+                    <td th:text="${producto.stock}"></td>
                     <td><img th:src="@{/foto/{foto}(foto=${producto.foto})}" alt="Imagen del producto"></td>
                     <td>
                         <a th:href="@{/editarProducto/{id}(id=${producto.id})}" class="btn-custom">Editar</a>
@@ -82,5 +100,15 @@
 
     <!-- Incluir Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+     <!-- Inicialización de DataTable con idioma español -->
+     <script>
+        let table = new DataTable('#myTable', {
+     language: {
+         url: 'https://cdn.datatables.net/plug-ins/2.3.0/i18n/es-ES.json'
+     }
+ });
+ 
+     </script>
 </body>
 </html>
