--- a/src/main/resources/templates/vermasProducto.html
+++ b/src/main/resources/templates/vermasProducto.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Ver más producto</title>
     <meta charset="UTF-8">
 </head>
+
 <body>
-<img th:src="@{/foto/{foto}(foto = ${foto})}" width="100px">
-<h1><span th:text="${nombre}"></span></h1>
-<form method="post" th:action="@{/carrito/agregar}">
-    <input type="hidden" name="productoId" th:value="${id}">
-    <p><strong>Color:</strong> <span th:text="${color}"></span></p>
-    <p><strong>Talle:</strong> <span th:text="${talle}"></span></p>
-    <label for="cantidad">Cantidad:</label>
-    <input type="number" id="cantidad" name="cantidad" min="1" required>
-    <br>
-    <span class="total" th:text="${'R$ ' + precio}"></span>
-    <br>
-    <button type="submit"><span>Agregar al carrito</span></button>
-</form>
-<h3 class="h2 m-0">Descrição do produto</h3>
-<p th:text="${descripcion}"></p>
+    <img th:src="@{/foto/{foto}(foto = ${foto})}" width="100px">
+    <img th:src="@{/foto/{foto}(foto=${foto1})}" width="100px">
+    <img th:src="@{/foto/{foto}(foto=${foto2})}" width="100px">
+
+
+    <h1><span th:text="${nombre}"></span></h1>
+    <form method="post" th:action="@{/carrito/agregar}">
+        <input type="hidden" name="productoId" th:value="${id}">
+        <p><strong>Color:</strong> <span th:text="${color}"></span></p>
+        <p><strong>Talle:</strong> <span th:text="${talle}"></span></p>
+        <label for="cantidad">Cantidad:</label>
+        <input type="number" id="cantidad" name="cantidad" min="1" required>
+        <br>
+        <span class="total" th:text="${'R$ ' + precio}"></span>
+        <br>
+        <button type="submit" th:disabled="${stock == 0}">
+            <span th:text="${stock == 0 ? 'Sin stock' : 'Agregar al carrito'}"></span>
+        </button>
+    </form>
+    <h3 class="h2 m-0">Descrição do produto</h3>
+    <p th:text="${descripcion}"></p>
 
 </body>
+
 </html>
