--- a/src/main/resources/templates/PanelControlAdmin.html
+++ b/src/main/resources/templates/PanelControlAdmin.html
@@ -47,21 +47,21 @@
       <div class="collapse navbar-collapse" id="menuPanel">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/datos-empresa" target="contenido">Datos de la Empresa</a>
+            <a class="nav-link" href="/datos-empresa">Datos de la Empresa</a>
           </li> 
       
           <li class="nav-item">
-            <a class="nav-link" href="listar-productos" target="contenido">Listar Productos</a>
+            <a class="nav-link" href="listar-productos">Listar Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/registrar-producto" target="contenido">Registrar Producto</a>
+            <a class="nav-link" href="/registrar-producto">Registrar Producto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="carrito/administrar_pedidos" target="contenido">Solicitud Ventas</a>
+            <a class="nav-link" href="carrito/administrar_pedidos">Solicitud Ventas</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/listarVentas" target="contenido"> Listar Ventas</a>
+            <a class="nav-link" href="/listarVentas"> Listar Ventas</a>
           </li>
 
         </ul>
